--- a/assets/keyboard.scss
+++ b/assets/keyboard.scss
@@ -105,7 +105,7 @@
 
 .keyboard .keyboard-controls a, .keyboard .keyboard-button span {
   display: inline-block;
-  background-image: url('assets/keyboard-icons.png');
+  background-image: url('keyboard-icons.png');
   background-color: transparent;
   background-repeat: no-repeat;
 }
